--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <script type="text/javascript" src="js/Controls.js"></script>
 <script type="text/javascript" src="js/Projectile.js"></script>
 <script type="text/javascript" src="js/Enemies.js"></script>
+<script type="text/javascript" src="js/CollisionControl.js"></script>
 </body>
 </html>
