Fix memoryleak, add levels and add enemies automaticly depending on level

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 <input type="button" onclick="Raket.GameLoop.go()" value="go">
 <input type="button" onclick="Raket.GameLoop.halt()" value="Halt">
-
-<input type="button" onclick="Raket.Enemies.createNew()" value="New enemy">
+<input type="button" onclick="Raket.GameControll.nextLevel()" value="Next level">
 
 
 
@@ -22,5 +21,6 @@
 <script type="text/javascript" src="js/Projectile.js"></script>
 <script type="text/javascript" src="js/Enemies.js"></script>
 <script type="text/javascript" src="js/CollisionControl.js"></script>
+<script type="text/javascript" src="js/GameControll.js"></script>
 </body>
 </html>
