--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <body>
 <canvas id="canvas" style="border:1px solid;"></canvas>
 <div><h3>Score: </h3> <span id="score"></span></div>
-<input type="button" onclick="Raket.GameLoop.go()" value="go">
-<input type="button" onclick="Raket.GameLoop.halt()" value="Halt">
-<input type="button" onclick="Raket.GameControll.nextLevel()" value="Next level">
+<input type="button" onclick="Raket.GameLoop.go()" value="Start">
+<input type="button" onclick="document.location.reload()" value="Restart">
 
 
 
